--- a/app/src/main/res/layout/item_bottom_sheet_forecast.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_forecast.xml
@@ -8,13 +8,13 @@
               android:elevation="8dp"
               android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </LinearLayout>
